# mrviewer

./: .gitattributes  .gitignore  CMakeLists.txt  COMPILING.txt  FEATURES.txt  HISTORY.txt  LICENSE.txt  README.md  README.txt  Videos.txt  build_dir.sh  envvars.sh  envvars_sanitize.sh  mk  movies  runme.sh  superbuild.sh  upload_docs.sh  valgrind.sh  valgrind.sup  vc14_win32_vars  vc14_win64_vars  win32_vars  win64_vars  win64_vars_debug
dependencies/SampleICC-1.6.10-win32/Contrib/ICC_utils/: CAT.h  CLUT.cpp  CLUT_stuffer.h  ICC_tool_exception.cpp  ICC_utils_v8.vcproj  Makefile.am  Makefile.in  Stubs.cpp
dependencies/SampleICC-1.6.10-win64-linux64/: Makefile  Makefile.am  Makefile.in  README  README.OSX  README.win  bootstrap  configure.ac  readMe.html  sampleicc.pc.in
dependencies/SampleICC-1.6.10-win64-linux64/Contrib/: Makefile.in
dependencies/SampleICC-1.6.10-win64-linux64/Contrib/CmdLine/: Makefile.am
dependencies/SampleICC-1.6.10-win64-linux64/Contrib/ICC_utils/: CAT.cpp  CLUT_stuffer.cpp  ICC_utils_v7.vcproj  Stubs.h  Vetters.cpp
dependencies/SampleICC-1.6.10-win64-linux64/Contrib/WinNT/: BuildAllContrib_v7.sln
dependencies/SampleICC-1.6.10-win64-linux64/Contrib/examples/: Makefile.am  Makefile.in
dependencies/SampleICC-1.6.10-win64-linux64/IccProfLib/: IccProfLib.vcxproj.filters  IccProfLibConf.h  IccProfLibVer.h  IccProfLib_CRTDLL.vcxproj  IccProfLib_CRTDLL.vcxproj.filters  Makefile
dependencies/SampleICC-1.6.10-win64-linux64/LibTiff/build-linux64/: Makefile
dependencies/SampleICC-1.6.10-win64-linux64/ReadMe_files/: filelist.xml
dependencies/SampleICC-1.6.10-win64-linux64/Tools/: Makefile.am  Makefile.in
dependencies/SampleICC-1.6.10-win64-linux64/Tools/CmdLine/: Makefile.am
libACESclip/: CMakeLists.txt  COMPILATION.txt  LICENSE.txt  README.md  mk  runme.sh
libACESclip/examples/: reader.cpp  writer.cpp  writer.cpp~
libACESclip/include/: ACESExport.h  ACESTransform.h  ACES_ASC_CDL.h  ACESclipReader.h  ACESclipWriter.h
libACESclip/lib/: ACESclipWriter.cpp  ACESclipWriter.cpp~  ACESclipWriter.h~
libACESclip/modules/: FindBoost.cmake  FindTinyXML2.cmake
libACESclip/src/: ACESclipReader.cpp  ACESclipWriter.cpp
libAMF/: CMakeLists.txt  README.md
libAMF/examples/: reader.cpp  writer.cpp
libAMF/modules/: FindBoost.cmake  FindTinyXML2.cmake
libAMF/src/: AMFBase.h  AMFExport.h  AMFReader.cpp  AMFReader.h  AMFWriter.cpp  AMFWriter.h
libAMF/src/SHA1/: SHA1.h
libAMF/src/SHA256/: SHA256.cpp  SHA256.h
libAMF/src/md5/: md5.h
mrViewer/src/: CMakeLists.txt  CMakeRegistry.cmake  mrViewer.lds.orig
mrViewer/src/audio/: RtAudio.cpp  mrvALSAEngine.cpp  mrvALSAEngine.h  mrvAOEngine.cpp  mrvAOEngine.h  mrvPortAudioEngine.cpp  mrvPortAudioEngine.h  mrvRtAudioEngine.cpp  mrvRtAudioEngine.h  mrvWaveEngine.cpp  mrvWaveEngine.h
mrViewer/src/cmake/: find_packages.cmake  functions.cmake  translations.cmake
mrViewer/src/core/: CMedia.cpp  CMedia.h  CMedia_audio.cpp  R3dImage.cpp  R3dImage.h  Sequence.cpp  Sequence.h  YouTube.cpp  YouTube.h  aviImage.cpp  aviImage.h  aviImage_save.cpp  brawImage.cpp  brawImage.h  byteSwap.h  clonedImage.cpp  clonedImage.h  cputable.h  ctlToLut.cpp  ctlToLut.h  ddsImage.cpp  ddsImage.h  exrImage.cpp  exrImage.h  guessImage.cpp  hdrImage.cpp  hdrImage.h  iffImage.cpp  iffImage.h  magickImage.cpp  mapImage.cpp  mapImage.h  mrSocket.cpp  mrSocket.h  mrStackTrace.cpp  mrStackTrace.h  mrStackTrace_linux.cpp  mrStackTrace_linux.h  mrStackTrace_win32.cpp  mrStackTrace_win32.h  (+90 more)
mrViewer/src/core/ext/: fvec.h
mrViewer/src/core/unix/: mrvTimer.h
mrViewer/src/core/win32/: mrvTimer.h
mrViewer/src/db/: mrvDatabase.cpp  mrvDatabase.h  mrvPostgreSQL.cpp  mrvPostgreSQL.h
mrViewer/src/fl/: .#mrViewer.fl  CMakeLists.txt  CMakeLists.txt~  EXROptionsUI.fl  WandOptionsUI.fl  convert_to_1.3.rb  convert_to_1.3.rb~  keyboard_ui.fl  mrViewer.fl  mrvAudioOffset.fl  mrvColorAreaUI.fl  mrvEDLWindowUI.fl  mrvIccProfileUI.fl  namespace.h  trial.fl  trial.fl~
mrViewer/src/fltk1.3/: CMakeLists.txt  aviSave.fl  keyboard_ui.fl  mk  mrViewer.fl  mrViewer.fl.orig  mrvAudioOffset.fl
mrViewer/src/gui/: #mrViewer.fl#  AboutUI.fl  EXROptionsUI.fl  GlWindow3d.cpp  GlWindow3d.cpp~  GlWindow3d.h  GlWindow3d.h~  MyPack.cpp  MyPack.h  OIIOOptionsUI.fl  WandOptionsUI.fl  aviSave.fl  ercoBrowser.cpp  keyboard_ui.fl  make_ocio_chooser.fl  mrViewer.fl  mrvActionWindow.cpp  mrvActionWindow.h  mrvAsk.cpp  mrvAsk.h  mrvAudioOffset.cxx  mrvAudioOffset.fl  mrvAudioOffset.h  mrvBrowser.cpp  mrvBrowser.h  mrvButton.cpp  mrvButton.h  mrvCTLBrowser.cpp  mrvCTLBrowser.h  mrvChoice.cpp  mrvChoice.h  mrvCollapsableGroup.cpp  mrvCollapsableGroup.h  mrvCollapsibleGroup.cpp  mrvCollapsibleGroup.h  mrvColorAreaUI.fl  mrvColorControlsUI.fl  mrvColorInfo.cpp  mrvColorInfo.h  mrvColorOps.cpp  (+113 more)
mrViewer/src/gui/FLU/: CMakeLists.txt  Flu_Button.cpp  Flu_Collapsable_Group.cpp  Flu_Collapsable_Group.h  Flu_Combo_Box.cpp  bugs.txt  (+32 more)
mrViewer/src/icc_parser/: mrvColorProfile.h  mrvICCHeader.cpp  mrvICCHeader.h  mrvICCIds.h  mrvICCProfile.cpp  mrvICCProfile.h  mrvICCTag.cpp  mrvICCTag.h  mrvICCTagTable.cpp  mrvICCTagTable.h  mrvICCTypes.h
mrViewer/src/icons/: icons.c  resource.rc  viewer.xpm  viewer16.xpm
mrViewer/src/musings/: DATABASE.txt  FEATURES.txt  FEATURES_SUMMARY.txt  INSTRUCTIONS.txt  REQUIREMENTS.txt  TODO.txt  extensions.txt  mysql.txt
mrViewer/src/nsis/: fileext.nsh
mrViewer/src/po/: ar.po  cn.po  copy_orig.rb  cs.po  de.po  en.po  es.mo.REMOVED.git-id  es.po  fr.po  gr.po  it.po  ja.po  ko.po  messages.pot  nl.po  pl.po  pt.po  replace_decimals.rb  ro.po  ru.po  search.rb  sv.po  tr.po  zh.po
mrViewer/src/standalone/: main.cpp  mrvCommandLine.cpp  mrvCommandLine.h  mrvRoot.cpp  mrvRoot.h
mrViewer/src/video/: #mrvGLQuad.cpp#  Polyline2D.h  mrvCSPUtils.cpp  mrvCSPUtils.h  mrvDrawEngine.cpp  mrvDrawEngine.h  mrvGLCube.cpp  mrvGLCube.h  mrvGLEngine.cpp  mrvGLEngine.h  mrvGLLut3d.cpp  mrvGLLut3d.h  mrvGLQuad.cpp  mrvGLQuad.h  mrvGLShader.cpp  mrvGLShader.h  mrvGLShape.cpp  mrvGLShape.h  mrvGLSphere.cpp  mrvGLSphere.h
tools/ctlparser/: CMakeLists.txt  main.cpp
(+7211 files in other folders)
